--- a/getFD.ipynb
+++ b/getFD.ipynb
@@ -2,45 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('infasmohamed2018@gamail.com',)\n",
-      "('aakkeef9253@gmail.com',)\n",
-      "('infmoha8@gmail.com',)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import mysql.connector\n",
-    "from datetime import date \n",
-    "\n",
-    "#sql connection\n",
-    "mydb = mysql.connector.connect(host=\"localhost\",user=\"root\", passwd=\"\", database=\"testdb\")\n",
-    "mycursor = mydb.cursor()\n",
-    "currentDate = date.today()\n",
-    "mycursor.execute(\"select Email from empdetails where Date = '%s' \" %currentDate)\n",
-    "for i in mycursor:\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('infasmohamed2018@gamail.com',), ('aakkeef9253@gmail.com',), ('infmoha8@gmail.com',), ('infasmohamed2018@gmail.com',)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mysql.connector\n",
     "from datetime import date \n",
@@ -98,36 +62,8 @@
     "\n",
     "with smtplib.SMTP_SSL('smtp.gmail.com', 465, context=cont) as smtp:\n",
     "    smtp.login(email_sender,email_password)\n",
-    "    smtp.sendmail(email_sender,email_receiver, em.as_string())\n",
-    "\n"
+    "    smtp.sendmail(email_sender,email_receiver, em.as_string())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# C:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\python.exe\n",
-    "\n",
-    "# C:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\python.exe\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
